[package]
name = "fhe-aes128"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
tfhe = { version = "0.11.0", features = [
    "boolean",
    "shortint",
    "integer",
    "noise-asserts",
    "nightly-avx512",
] }
clap = { version = "4.1", features = ["derive"] }
rayon = "1.10.0"
aes = "0.8.4"
rand = "0.8.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }


